// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "google/rpc/status.proto";
import "scalapb/scalapb.proto";

// DA's wrapper around `google.rpc.Status` for the proper versioning and code-gen
message VersionedStatus {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StorageProtoVersion";

  google.rpc.Status status = 1;
}
