// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.synchronizer.protocol.v30;

import "com/digitalasset/canton/crypto/v30/crypto.proto";
import "scalapb/scalapb.proto";

message AggregatedSignaturesOfSender {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StorageProtoVersion";

  repeated SignaturesForEnvelope signatures_by_envelope = 1;

  message SignaturesForEnvelope {
    repeated com.digitalasset.canton.crypto.v30.Signature signatures = 3;
  }
}
